# captive-portal

./: .gitignore  CMakeLists.txt  README.md  TODO.md  extra_script.py  platformio.ini
data/www/: index.html  main.js
lib/espconfig/: espconfig.cpp  espconfig.h
res/www/: index.html  main.css  main.js
src/: captive-portal.cpp  minimal.cpp  portalResources.h
src/utils/: resourcesToHeader.cpp
utils/: resourcesToHeader.cpp
